Add routes for flows
